packages/transpiler/test/fixtures/errors/call-signature-on-interface/input.ts
/**
 * @public
 */
export interface Callable {
    (x: number): string;
}
